# ip-ranges

./: Cargo.toml  README.md  datacenter-cidr.txt
benches/: my_benchmark.rs
src/: lib.rs  tests.rs
