[package]
name = "ip-ranges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
cidr-utils = "0.5.5"
itertools = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
rust-lapper = "1.0"

[[bench]]
name = "my_benchmark"
harness = false

[dev-dependencies]
rand = "0.8"
criterion = "0.3"
